# shards

./: README.md  pyproject.toml  svd-afmap.py
saes/: solutions.py
toy_models/: experiments.py  gated_sae.py  lr_scheduler.py  sae.py  toy_datasets.py  toy_model.py  train_sae.py
toy_models/2_input_l1_vs_l2/: l1_lambdas.csv  l1_lambdas_2024-06-24_22-53-21.csv  l1_lambdas_2024-06-24_23-07-19.csv
toy_models/utils/: custom_tqdm.py
