[tool.poetry]
name = "shards"
version = "0.1.0"
description = ""
authors = ["UFO-101 <josephmiller101@gmail.com>"]
packages = [{include = "toy_models"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.3.1"
transformer-lens = "^2.1.0"
vscode-tqdm = "4.66.2"
ipykernel = "^6.29.4"
scipy = "1.13.1"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
ipywidgets = "^8.1.3"
einops = "^0.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
